--- a/.github/workflows/MTK-ALL.yml
+++ b/.github/workflows/MTK-ALL.yml
@@ -36,7 +36,7 @@ jobs:
           #   BRANCH: master
           - TARGET: MEDIATEK
             SOURCE: immortalwrt/immortalwrt
-            BRANCH: openwrt-23.05
+            BRANCH: v23.05.3
 
     #调用公用编译核心WRT-CORE.yml
     uses: ./.github/workflows/WRT-CORE.yml
